Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-9314

magnify: fix CID 512972 and CID 512973

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.0
    • None

    Description

      In LoadSettings, replace RegCreateKeyEx with RegOpenKeyEx, check its result and
      only try to read the settings from the registry if it does not fail. Should fix CID 512972.

      In SaveSettings, check the result of RegCreateKeyEx and only try to write the settings
      to the registry if does not fail. Should fix CID 512973.

      Attachments

        Activity

          People

            hbelusca hbelusca
            Forever Winter Forever Winter
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: