[MAGNIFY]: Fix CID 512972 and CID 512973. [EVENTLOG]: Fix CID 515148, CID 515149 and CID 512988. By Ricardo Hanke. CORE-9314 CORE-9316 #resolve #comment Committed, thanks!

svn path=/trunk/; revision=66558